# agent-runtime-core

./: CMakeLists.txt  README.md
docs/: agent-design.md  architecture.md  execution-model.md  failure-scenarios.md  tradeoffs.md
src/: agent.cpp  agent.h  main.cpp  runtime.cpp  runtime.h  telemetry.cpp  telemetry.h  tools.cpp  tools.h
src/agent/: AgentInstance.cpp  AgentInstance.h
src/runtime/: AgentRuntime.cpp  AgentRuntime.h  Telemetry.cpp  Telemetry.h
src/tools/: SearchTool.cpp  SearchTool.h  SummaryTool.cpp  SummaryTool.h  tool.h
